--- a/Kasyno.csproj
+++ b/Kasyno.csproj
@@ -54,6 +54,21 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Wojna.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Wojna.Designer.cs">
+      <DependentUpon>Wojna.cs</DependentUpon>
+    </Compile>
+    <Compile Include="wojna_gra.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="wojna_gra.Designer.cs">
+      <DependentUpon>wojna_gra.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -63,6 +78,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Wojna.resx">
+      <DependentUpon>Wojna.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="wojna_gra.resx">
+      <DependentUpon>wojna_gra.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
