--- a/Kasyno.csproj
+++ b/Kasyno.csproj
@@ -78,6 +78,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Roulette.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -102,6 +107,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Roulette.resx">
       <DependentUpon>Roulette.cs</DependentUpon>
@@ -149,6 +155,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Roulette_Table\Roulette_table.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\spades-icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
